@@ -154,10 +154,9 @@ class RestAiAssistantCreationControllerTest {
       ArgumentCaptor<AssistantRequest> captor = ArgumentCaptor.forClass(AssistantRequest.class);
       verify(openAiApi).createAssistant(captor.capture());
       assertThat(captor.getValue().getName()).startsWith("Assistant for notebook ");
-      assertThat(captor.getValue().getTools().getFirst().getType()).startsWith("function");
+      assertThat(captor.getValue().getTools().get(0).getType()).startsWith("function");
       assertThat(captor.getValue().getTools().get(4).getType()).startsWith("file_search");
-      assertThat(
-              captor.getValue().getToolResources().getFileSearch().getVectorStoreIds().getFirst())
+      assertThat(captor.getValue().getToolResources().getFileSearch().getVectorStoreIds().get(0))
           .isEqualTo("new-vector-store-id");
     }
 
